--- a/pantunes.html
+++ b/pantunes.html
@@ -11,9 +11,11 @@
 
 <body>
     <nav class="nav-bar">
-        <div class="nav-title">Pantune</div>
+        <a href="/pantunes.html" class="nav-link">
+            <h1 class="nav-title">Pantune</h1>
+        </a>
         <div class="nav-btn">
-            <a href="./signin.html"><button class="btn-1">Sign in</button></a>
+            <a href="./signin.html"><button class="btn-1">Sign In</button></a>
             <a href="./signup.html"><button class="btn-2">Sign Up</button></a>
         </div>
     </nav>
@@ -25,7 +27,7 @@
             </p>
         </div>
         <div class="btn-container">
-            <button class="heading-btn">Play Music</button>
+            <a href="./home.html"><button class="heading-btn">Play Music</button></a>
         </div>
     </header>
     <div class="slider-div">
