--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,9 @@
 
 <body>
     <nav class="nav-bar">
-        <div class="nav-title">Pantunes</div>
+        <a href="/pantunes.html" class="nav-link">
+            <h1 class="nav-title">Pantune</h1>
+        </a>
     </nav>
     <main class="main-container">
         <div class="container-content">
