--- a/home.html
+++ b/home.html
@@ -10,28 +10,146 @@
 </head>
 
 <body>
-    <nav>
-        <a href="">
-            <h1>Pantunes</h1>
-        </a>
-        <input type="Search" placeholder="Search">
-        <div>
-            <!-- music icon -->
-            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="32" height="32" rx="8" fill="#0A0A0A" />
-                <path
-                    d="M22.75 7V11.5M25 9.25H20.5M11.5 23.125V10L16.0187 8.875M17.875 12.9062L11.5 14.5M23.5 15.9344V20.125M20.875 22.75C22.3247 22.75 23.5 21.5747 23.5 20.125C23.5 18.6753 22.3247 17.5 20.875 17.5C19.4253 17.5 18.25 18.6753 18.25 20.125C18.25 21.5747 19.4253 22.75 20.875 22.75ZM8.875 25.75C10.3247 25.75 11.5 24.5747 11.5 23.125C11.5 21.6753 10.3247 20.5 8.875 20.5C7.42525 20.5 6.25 21.6753 6.25 23.125C6.25 24.5747 7.42525 25.75 8.875 25.75Z"
-                    stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <!-- notis icon -->
-            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="32" height="32" rx="8" fill="#0A0A0A" />
-                <path
-                    d="M13.0004 22.0001V22.7501C13.0004 23.5458 13.3164 24.3088 13.8791 24.8714C14.4416 25.434 15.2047 25.7501 16.0004 25.7501C16.796 25.7501 17.5591 25.434 18.1217 24.8714C18.6843 24.3088 19.0004 23.5458 19.0004 22.7501V22.0001M9.26904 13.7501C9.26779 12.861 9.44246 11.9803 9.783 11.159C10.1235 10.3377 10.6232 9.5918 11.2532 8.96438C11.8832 8.33697 12.6312 7.8404 13.454 7.50329C14.2767 7.16617 15.158 6.99515 16.0472 7.0001C19.7597 7.02823 22.7315 10.1126 22.7315 13.8345V14.5001C22.7315 17.8563 23.4347 19.8063 24.0534 20.8751C24.1191 20.9889 24.1538 21.118 24.1539 21.2494C24.154 21.3809 24.1196 21.51 24.0541 21.624C23.9885 21.7379 23.8943 21.8326 23.7806 21.8986C23.6669 21.9646 23.5379 21.9996 23.4065 22.0001H8.59404C8.46261 21.9996 8.33361 21.9646 8.21996 21.8986C8.10632 21.8326 8.01201 21.7379 7.9465 21.624C7.88099 21.51 7.84656 21.3809 7.84668 21.2494C7.84679 21.118 7.88145 20.9889 7.94717 20.8751C8.56592 19.8063 9.26904 17.8563 9.26904 14.5001V13.7501Z"
-                    stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+    <div class="container">
+        <nav>
+            <a href="">
+                <h1>Pantunes</h1>
+            </a>
+            <input type="Search" placeholder="Search">
+            <div class="icons-div">
+                <div class="action-icons">
+                    <!-- music icon -->
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="8" fill="#0A0A0A" />
+                        <path
+                            d="M22.75 7V11.5M25 9.25H20.5M11.5 23.125V10L16.0187 8.875M17.875 12.9062L11.5 14.5M23.5 15.9344V20.125M20.875 22.75C22.3247 22.75 23.5 21.5747 23.5 20.125C23.5 18.6753 22.3247 17.5 20.875 17.5C19.4253 17.5 18.25 18.6753 18.25 20.125C18.25 21.5747 19.4253 22.75 20.875 22.75ZM8.875 25.75C10.3247 25.75 11.5 24.5747 11.5 23.125C11.5 21.6753 10.3247 20.5 8.875 20.5C7.42525 20.5 6.25 21.6753 6.25 23.125C6.25 24.5747 7.42525 25.75 8.875 25.75Z"
+                            stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <!-- notis icon -->
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="32" height="32" rx="8" fill="#0A0A0A" />
+                        <path
+                            d="M13.0004 22.0001V22.7501C13.0004 23.5458 13.3164 24.3088 13.8791 24.8714C14.4416 25.434 15.2047 25.7501 16.0004 25.7501C16.796 25.7501 17.5591 25.434 18.1217 24.8714C18.6843 24.3088 19.0004 23.5458 19.0004 22.7501V22.0001M9.26904 13.7501C9.26779 12.861 9.44246 11.9803 9.783 11.159C10.1235 10.3377 10.6232 9.5918 11.2532 8.96438C11.8832 8.33697 12.6312 7.8404 13.454 7.50329C14.2767 7.16617 15.158 6.99515 16.0472 7.0001C19.7597 7.02823 22.7315 10.1126 22.7315 13.8345V14.5001C22.7315 17.8563 23.4347 19.8063 24.0534 20.8751C24.1191 20.9889 24.1538 21.118 24.1539 21.2494C24.154 21.3809 24.1196 21.51 24.0541 21.624C23.9885 21.7379 23.8943 21.8326 23.7806 21.8986C23.6669 21.9646 23.5379 21.9996 23.4065 22.0001H8.59404C8.46261 21.9996 8.33361 21.9646 8.21996 21.8986C8.10632 21.8326 8.01201 21.7379 7.9465 21.624C7.88099 21.51 7.84656 21.3809 7.84668 21.2494C7.84679 21.118 7.88145 20.9889 7.94717 20.8751C8.56592 19.8063 9.26904 17.8563 9.26904 14.5001V13.7501Z"
+                            stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </div>
+                <div class="profile-image">
+                    <img src="./pantfiles/pfp.jpg" alt="profile-image">
+                </div>
+            </div>
+        </nav>
+        <div class="content-container">
+            <div class="side-bar">
+                <a href="./home.html">
+                    <div class="side-container">
+                        <div class="side-one">
+                            <div class="side-icons" id="active-icon">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <a href="./home.html">
+                                        <path
+                                            d="M12.25 17.999V13.499C12.25 13.3001 12.1709 13.1093 12.0303 12.9686C11.8897 12.828 11.6989 12.749 11.5 12.749H8.5C8.3011 12.749 8.1103 12.828 7.96968 12.9686C7.82905 13.1093 7.75 13.3001 7.75 13.499V17.999C7.75 18.1979 7.67095 18.3887 7.53032 18.5293C7.3897 18.67 7.1989 18.749 7 18.749H2.5C2.30108 18.749 2.11032 18.67 1.96967 18.5293C1.82902 18.3887 1.75 18.1979 1.75 17.999V9.32709C1.75168 9.22329 1.77411 9.12091 1.81597 9.02589C1.85783 8.93094 1.91828 8.84529 1.99375 8.77396L9.49375 1.95835C9.63197 1.83187 9.81258 1.76172 10 1.76172C10.1874 1.76172 10.368 1.83187 10.5062 1.95835L18.0062 8.77396C18.0817 8.84529 18.1422 8.93094 18.184 9.02589C18.2259 9.12091 18.2484 9.22329 18.25 9.32709V17.999C18.25 18.1979 18.1709 18.3887 18.0303 18.5293C17.8897 18.67 17.6989 18.749 17.5 18.749H13C12.8011 18.749 12.6103 18.67 12.4697 18.5293C12.3291 18.3887 12.25 18.1979 12.25 17.999Z"
+                                            fill="#0A0A0A" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </a>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="links-container" id="active-para-div">
+                            <a href="./home.html">
+                                <p class="side-bar-para" id="active-side-para">Home</p>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="side-container">
+                        <div class="side-one">
+                            <div class="side-icons">
+                                <!-- all tracks -->
+                                <svg width="18" height="20" viewBox="0 0 18 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M9 14.75V1.25L16.5 3.5V8L9 5.75M5.25 18.5C7.32105 18.5 9 16.821 9 14.75C9 12.679 7.32105 11 5.25 11C3.17893 11 1.5 12.679 1.5 14.75C1.5 16.821 3.17893 18.5 5.25 18.5Z"
+                                        stroke="#FF8A2E" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="links-container">
+                            <a href="">
+                                <p class="side-bar-para">All Tracks</p>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="side-container">
+                        <div class="side-one">
+                            <div class="side-icons">
+                                <!-- playlist -->
+                                <svg width="22" height="17" viewBox="0 0 22 17" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.75 1.5H18.25M1.75 7.5H13M1.75 13.5H8.5M16.75 13.5V6L20.5 7.125M14.5 15.75C15.7427 15.75 16.75 14.7427 16.75 13.5C16.75 12.2573 15.7427 11.25 14.5 11.25C13.2573 11.25 12.25 12.2573 12.25 13.5C12.25 14.7427 13.2573 15.75 14.5 15.75Z"
+                                        stroke="#FF8A2E" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="links-container">
+                            <a href="">
+                                <p class="side-bar-para">Playlist</p>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="side-container">
+                        <div class="side-one">
+                            <div class="side-icons">
+                                <!-- settings icon -->
+                                <svg width="22" height="21" viewBox="0 0 22 21" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M19.5219 5.15801C20.0138 6.30672 20.1343 7.58052 19.8663 8.80107C19.5983 10.0216 18.9554 11.1278 18.0274 11.9648C17.0995 12.8018 15.9331 13.3276 14.6915 13.4688C13.4499 13.6098 12.1952 13.3592 11.1031 12.7518L5.84375 18.8455C5.42106 19.2682 4.84777 19.5057 4.25 19.5057C3.65223 19.5057 3.07894 19.2682 2.65625 18.8455C2.23356 18.4228 1.99609 17.8495 1.99609 17.2518C1.99609 16.654 2.23356 16.0807 2.65625 15.658L8.75002 10.3986C8.14259 9.30657 7.89187 8.0519 8.03302 6.81027C8.17409 5.56862 8.69999 4.40219 9.53692 3.47428C10.3739 2.54637 11.4801 1.90342 12.7007 1.63545C13.9213 1.36748 15.1951 1.48792 16.3438 1.97988L12.4063 5.90801L12.9406 8.56115L15.5938 9.09552L19.5219 5.15801Z"
+                                        stroke="#FF8A2E" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="links-container">
+                            <a href="">
+                                <p class="side-bar-para">Settings</p>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="side-container">
+                        <div class="side-one">
+                            <div class="side-icons">
+                                <!-- logout icon -->
+                                <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M14.3125 6.5625L18.25 10.5L14.3125 14.4375M7.75 10.5H18.25M7.75 18.75H2.5C2.30109 18.75 2.11032 18.6709 1.96967 18.5303C1.82902 18.3897 1.75 18.1989 1.75 18V3C1.75 2.80109 1.82902 2.61032 1.96967 2.46967C2.11032 2.32902 2.30109 2.25 2.5 2.25H7.75"
+                                        stroke="#FF8A2E" stroke-width="3" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="links-container">
+                            <a href="">
+                                <p class="side-bar-para">Log Out</p>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="big"></div>
         </div>
-    </nav>
+    </div>
 </body>
 
 </html>
