--- a/alltracks.html
+++ b/alltracks.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Home</title>
+    <title>All Tracks</title>
 </head>
 
 <body>
@@ -41,19 +41,17 @@
         <div class="content-container">
             <div class="side-bar">
                 <div class="side-small">
-                    <div class="side-icons" id="active-icon">
+                    <div class="side-icons">
                         <!-- home -->
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <a href="./home.html">
                                 <path
-                                    d="M12.25 17.999V13.499C12.25 13.3001 12.1709 13.1093 12.0303 12.9686C11.8897 12.828 11.6989 12.749 11.5 12.749H8.5C8.3011 12.749 8.1103 12.828 7.96968 12.9686C7.82905 13.1093 7.75 13.3001 7.75 13.499V17.999C7.75 18.1979 7.67095 18.3887 7.53032 18.5293C7.3897 18.67 7.1989 18.749 7 18.749H2.5C2.30108 18.749 2.11032 18.67 1.96967 18.5293C1.82902 18.3887 1.75 18.1979 1.75 17.999V9.32709C1.75168 9.22329 1.77411 9.12091 1.81597 9.02589C1.85783 8.93094 1.91828 8.84529 1.99375 8.77396L9.49375 1.95835C9.63197 1.83187 9.81258 1.76172 10 1.76172C10.1874 1.76172 10.368 1.83187 10.5062 1.95835L18.0062 8.77396C18.0817 8.84529 18.1422 8.93094 18.184 9.02589C18.2259 9.12091 18.2484 9.22329 18.25 9.32709V17.999C18.25 18.1979 18.1709 18.3887 18.0303 18.5293C17.8897 18.67 17.6989 18.749 17.5 18.749H13C12.8011 18.749 12.6103 18.67 12.4697 18.5293C12.3291 18.3887 12.25 18.1979 12.25 17.999Z"
-                                    fill="#0A0A0A" stroke="#0A0A0A" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
+                                    d="M12.25 17.999V13.499C12.25 13.3001 12.1709 13.1093 12.0303 12.9686C11.8897 12.828 11.6989 12.749 11.5 12.749H8.5C8.3011 12.749 8.1103 12.828 7.96968 12.9686C7.82905 13.1093 7.75 13.3001 7.75 13.499V17.999C7.75 18.1979 7.67095 18.3887 7.53032 18.5293C7.3897 18.67 7.1989 18.749 7 18.749H2.5C2.30109 18.749 2.11032 18.67 1.96967 18.5293C1.82902 18.3887 1.75 18.1979 1.75 17.999V9.32709C1.75168 9.22329 1.77411 9.12091 1.81597 9.02589C1.85783 8.93094 1.91828 8.84529 1.99375 8.77396L9.49375 1.95835C9.63197 1.83187 9.81258 1.76172 10 1.76172C10.1874 1.76172 10.368 1.83187 10.5062 1.95835L18.0062 8.77396C18.0817 8.84529 18.1422 8.93094 18.184 9.02589C18.2259 9.12091 18.2484 9.22329 18.25 9.32709V17.999C18.25 18.1979 18.1709 18.3887 18.0303 18.5293C17.8897 18.67 17.6989 18.749 17.5 18.749H13C12.8011 18.749 12.6103 18.67 12.4697 18.5293C12.3291 18.3887 12.25 18.1979 12.25 17.999Z"
+                                    stroke="#FF8A2E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                             </a>
-
                         </svg>
                     </div>
-                    <div class="side-icons">
+                    <div class="side-icons" id="active-icon">
                         <!-- all tracks -->
                         <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <a href="./alltracks.html">
@@ -91,14 +89,14 @@
                     </div>
                 </div>
                 <div class="side-big">
-                    <div class="links-container" id="active-para-div">
+                    <div class="links-container">
                         <a href="./home.html">
-                            <p class="side-bar-para" id="active-side-para">Home</p>
+                            <p class="side-bar-para">Home</p>
                         </a>
                     </div>
-                    <div class="links-container">
+                    <div class="links-container" id="active-para-div">
                         <a href="./alltracks.html">
-                            <p class="side-bar-para">All Tracks</p>
+                            <p class="side-bar-para" id="active-side-para">All Tracks</p>
                         </a>
                     </div>
                     <div class="links-container">
@@ -119,64 +117,8 @@
                 </div>
             </div>
             <div class="main-content">
-                <div class="ads-container"></div>
-                <div class="featured-section">
-                    <p class="section-header">Featured Album</p>
-                    <div class="featured-albums">
-                        <div class="albums">
-                            <div class="album-art"></div>
-                            <div class="album-description">
-                                <p class="album-title">Twice As Tall</p>
-                                <p class="album-artiste">Burna Boy</p>
-                                <div class="genre-container">
-                                    <p class="album-genre">Afro Beat</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="albums">
-                            <div class="album-art"></div>
-                            <div class="album-description">
-                                <p class="album-title">Twice As Tall</p>
-                                <p class="album-artiste">Burna Boy</p>
-                                <div class="genre-container">
-                                    <p class="album-genre">RnB</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="albums">
-                            <div class="album-art"></div>
-                            <div class="album-description">
-                                <p class="album-title">Twice As Tall</p>
-                                <p class="album-artiste">Burna Boy</p>
-                                <div class="genre-container">
-                                    <p class="album-genre">Afro Beat</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="albums">
-                            <div class="album-art"></div>
-                            <div class="album-description">
-                                <p class="album-title">Twice As Tall</p>
-                                <p class="album-artiste">Burna Boy</p>
-                                <div class="genre-container">
-                                    <p class="album-genre">Afro Beat</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="albums">
-                            <div class="album-art"></div>
-                            <div class="album-description">
-                                <p class="album-title">Twice As Tall</p>
-                                <p class="album-artiste">Burna Boy</p>
-                                <div class="genre-container">
-                                    <p class="album-genre">Afro Beat</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="now-playing">
-                    <p class="now-playing-text">Playing Now</p>
+                <div class="all-tracks">
+                    <p class="now-playing-text">All Tracks</p>
                     <div class="now-playing-cards-container">
                         <div class="now-playing-cards" id="active-now-playing">
                             <div class="playing-icons">
@@ -197,7 +139,7 @@
                             <p>Love, Damini</p>
                             <p>Love, Damini | 2022</p>
                             <p>Burna Boy</p>
-                            <div id="track-waves">
+                            <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
