new pages added

--- a/home.html
+++ b/home.html
@@ -194,9 +194,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -241,7 +241,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -259,9 +259,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Burna Boy & Fireboy</p>
+                            <p class="playing-para">Burna Boy & Fireboy</p>
+                            <p class="playing-para">Burna Boy & Fireboy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -306,7 +306,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -324,9 +324,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -371,7 +371,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -389,9 +389,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -436,7 +436,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -454,9 +454,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -501,7 +501,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -519,9 +519,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -566,7 +566,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -584,9 +584,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -631,7 +631,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -649,9 +649,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -696,7 +696,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -714,9 +714,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -761,7 +761,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -779,9 +779,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -826,7 +826,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -844,9 +844,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -891,7 +891,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -909,9 +909,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -956,7 +956,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -974,9 +974,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -1021,7 +1021,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                         <div class="now-playing-cards">
                             <div class="playing-icons">
@@ -1039,9 +1039,9 @@
                                         fill="#FF8A2E" />
                                 </svg>
                             </div>
-                            <p>Love, Damini</p>
-                            <p>Love, Damini | 2022</p>
-                            <p>Burna Boy</p>
+                            <p class="playing-para">Love, Damini</p>
+                            <p class="playing-para">Love, Damini | 2022</p>
+                            <p class="playing-para">Burna Boy</p>
                             <div class="track-wavelines" id="track-waves">
                                 <!-- track-lines -->
                                 <svg width="80" height="32" viewBox="0 0 80 32" fill="none"
@@ -1086,7 +1086,7 @@
                                         stroke-linecap="round" />
                                 </svg>
                             </div>
-                            <p>03:23</p>
+                            <p class="now-playing-time">03:23</p>
                         </div>
                     </div>
                 </div>
