--- a/home.html
+++ b/home.html
@@ -81,14 +81,17 @@
                                 stroke="#FF8A2E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
-                    <div class="side-icons">
-                        <!-- logout icon -->
-                        <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M14.3125 6.5625L18.25 10.5L14.3125 14.4375M7.75 10.5H18.25M7.75 18.75H2.5C2.30109 18.75 2.11032 18.6709 1.96967 18.5303C1.82902 18.3897 1.75 18.1989 1.75 18V3C1.75 2.80109 1.82902 2.61032 1.96967 2.46967C2.11032 2.32902 2.30109 2.25 2.5 2.25H7.75"
-                                stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </div>
+                    <a href="./pantunes.html">
+                        <div class="side-icons">
+                            <!-- logout icon -->
+                            <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14.3125 6.5625L18.25 10.5L14.3125 14.4375M7.75 10.5H18.25M7.75 18.75H2.5C2.30109 18.75 2.11032 18.6709 1.96967 18.5303C1.82902 18.3897 1.75 18.1989 1.75 18V3C1.75 2.80109 1.82902 2.61032 1.96967 2.46967C2.11032 2.32902 2.30109 2.25 2.5 2.25H7.75"
+                                    stroke="#FF8A2E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </a>
                 </div>
                 <div class="side-big">
                     <div class="links-container" id="active-para-div">
@@ -112,7 +115,7 @@
                         </a>
                     </div>
                     <div class="links-container">
-                        <a href="">
+                        <a href="./pantunes.html">
                             <p class="side-bar-para">Log Out</p>
                         </a>
                     </div>
